# slidr

./: .gitignore  .pdm-python  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SKILL.md  docker-compose.yml  go.mod  go.sum  main.go  nohup.out  pyproject.toml  shell.html
.github/workflows/: release.yml  test.yml
docs/: THEMING.md  conf.py  index.rst
docs/superpowers/plans/: 2026-07-09-odp-renderer.md
docs/superpowers/specs/: 2026-07-09-odp-renderer-design.md
examples/: d2_demo.md  demo_deck.md  features_demo.md  graphviz_demo.md  lucide_demo.md  mermaid_demo.md  seaborn_demo.md  test_kubecon.md
internal/parser/: ast.go  parser.go  parser_test.go
internal/render/html/: render.go
internal/render/html/templates/: card.tmpl  shell.tmpl  slide.tmpl
internal/render/pdf/: pdf.go
internal/render/pptx/: pptx.go
internal/theme/: loader.go
src/: main.rs
src/parser/: ast.rs  html.rs  markdown.rs  mod.rs
src/render/: html.rs  mod.rs
src/slidr/: __init__.py  __main__.py  cli.py
src/slidr/parser/: ast.py  markdown.py
src/slidr/plugins/: cards.py  directives.py  fenced.py  layouts.py  lucide.py
src/slidr/render/: dot.py  html.py  ir.py  odp.py  pdf.py  pptx.py  seaborn.py  seaborn_runner.py
src/slidr/render/odf/: __init__.py  layout.py  style.py
src/slidr/render/templates/: base.css  presenter.html  shell.html  slidr.js
src/slidr/seaborn_styles/: __init__.py  kcd_vietnam.py  kubecon_japan.py
src/slidr/theme/: colors.py  loader.py  parser.py
src/slidr/themes/: default.css  kcd_vietnam.css  kubecon_japan.css
src/theme/: mod.rs
tests/: test_dot.py  test_html.py  test_odf.py  test_odp.py  test_parser.py  test_seaborn_styles.py
