[project]
name = "slidr"
version = "0.1.0"
description = "Markdown to styled PPTX + PDF"
authors = [
    {name = "Reza Jelveh", email = "git@jelveh.me"},
]
dependencies = ["markdown-it-py>=4.2.0", "python-frontmatter>=1.3.0", "weasyprint>=69.0", "jinja2>=3.1.6", "typer>=0.26.8", "linkify-it-py>=2.1.0", "mdit-py-plugins>=0.6.1", "python-pptx>=1.0.2", "tinycss2>=1.5.1", "pygments-styles>=0.3.0", "py-d2>=1.0.1", "odfdo>=3.22.10"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[project.scripts]
slidr = "slidr.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
