[project]
name = "slidr"
version = "0.1.1"
description = "Markdown to styled PPTX + PDF"
authors = [
    {name = "Reza Jelveh", email = "git@jelveh.me"},
]
dependencies = ["markdown-it-py>=4.2.0", "python-frontmatter>=1.3.0", "weasyprint>=69.0", "jinja2>=3.1.6", "typer>=0.26.8", "linkify-it-py>=2.1.0", "mdit-py-plugins>=0.6.1", "python-pptx>=1.0.2", "tinycss2>=1.5.1", "pygments-styles>=0.3.0", "odfdo>=3.22.10", "mermaidx>=0.8.1", "python-lucide>=0.5.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[project.scripts]
slidr = "slidr.cli:app"

[project.optional-dependencies]
docs = [
    "sphinx>=9.0.4",
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
plot = [
    "pillow>=11.0.0",
    "seaborn>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]

[tool.pdm]
distribution = true

